Fix overflow

--- a/client/src/styles/base/_main.scss
+++ b/client/src/styles/base/_main.scss
@@ -39,6 +39,7 @@ p {
     padding: 0;
     border: solid 10px black;
     border-radius: 20px;
+    overflow-y: scroll;
   }
 
   body {
